dev local tools and more

--- a/packages/server/.env
+++ b/packages/server/.env
@@ -5,7 +5,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=memedb
 POSTGRES_PORT=5432
-POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 
 REDIS_PASSWORD=password
 REDIS_PORT=6379
