--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,8 @@
     "@prisma/client": "^4.6.1",
     "cache-manager": "^5.1.3",
     "cache-manager-redis-store": "^3.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "connect-redis": "^6.1.3",
     "ethers": "5.5.1",
     "express-session": "^1.17.3",
