--- a/packages/server/.env
+++ b/packages/server/.env
@@ -1,7 +1,7 @@
 PORT=3000
 APP_ENV=staging
 SESSION_SECRET=yeehaw
-# SESSION_NAME=meme-api-local-session
+SESSION_NAME=meme-api-local-session
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
