--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -38,6 +38,7 @@
     "connect-redis": "^6.1.3",
     "ethers": "5.5.1",
     "express-session": "^1.17.3",
+    "image-size": "^1.0.2",
     "joi": "^17.7.0",
     "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
