--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.6.1",
+    "alchemy-sdk": "^2.2.5",
     "cache-manager": "^5.1.3",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
