--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,9 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "@prisma/client": "^4.6.1",
+    "@sentry/hub": "^7.12.0",
+    "@sentry/node": "^7.29.0",
+    "@travelerdev/nestjs-sentry": "^4.1.0",
     "alchemy-sdk": "^2.2.5",
     "cache-manager": "^5.1.3",
     "cache-manager-redis-store": "^3.0.1",
