--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,11 +20,17 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "ethers": "^5.7.2",
+    "final-form": "^4.20.7",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "next": "13.0.5",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-final-form": "^6.5.9",
     "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.1",
     "siwe": "^1.1.6",
     "typescript": "4.9.3",
     "wagmi": "^0.10.2"
