--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,6 +30,7 @@
     "react-dropzone": "^14.2.3",
     "react-final-form": "^6.5.9",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-toastify": "^9.1.1",
     "siwe": "^1.1.6",
     "typescript": "4.9.3",
