--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.0.5",
     "ethers": "^5.7.2",
     "final-form": "^4.20.7",
+    "lodash": "^4.17.21",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "next": "13.0.5",
