--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,12 +28,14 @@
     "mobx-react-lite": "^3.4.0",
     "next": "13.0.5",
     "next-auth": "^4.18.7",
+    "postcss-custom-properties-fallback": "^1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-final-form": "^6.5.9",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "react-spring-bottom-sheet": "^3.5.0-alpha.0",
     "react-toastify": "^9.1.1",
     "siwe": "^1.1.6",
     "typescript": "4.9.3",
