--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "ethers": "5.5.1",
     "siwe": "^1.1.6"
   }
