--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -59,6 +59,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/jest": "28.1.4",
+    "@types/lodash.merge": "^4.6.7",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
