--- a/packages/server/copilot/api/manifest.yml
+++ b/packages/server/copilot/api/manifest.yml
@@ -17,9 +17,13 @@ http:
 # Configuration for your containers and service.
 image:
   # Docker build arguments. For additional overrides: https://aws.github.io/copilot-cli/docs/manifest/lb-web-service/#image-build
-  build: api.Dockerfile
+  build: 
+    dockerfile: api.Dockerfile
+    target: production
+    args:
+      PORT: 3000
   # Port exposed through your container to route traffic to it.
-  port: 80
+  port: 3000
 
 cpu: 256       # Number of CPU units for the task.
 memory: 512    # Amount of memory in MiB used by the task.
@@ -40,8 +44,9 @@ network:
 #  GITHUB_TOKEN: GITHUB_TOKEN  # The key is the name of the environment variable, the value is the name of the SSM parameter.
 
 # You can override any of the values defined above by environment.
-#environments:
-#  test:
-#    count: 2               # Number of tasks to run for the "test" environment.
-#    deployment:            # The deployment strategy for the "test" environment.
-#       rolling: 'recreate' # Stops existing tasks before new ones are started for faster deployments.
+environments:
+ test:
+  env_file: .test.env
+  #  count: 2               # Number of tasks to run for the "test" environment.
+  #  deployment:            # The deployment strategy for the "test" environment.
+      # rolling: 'recreate' # Stops existing tasks before new ones are started for faster deployments.
