--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,7 +12,6 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,7 +24,7 @@
     "prisma:seed": "npx prisma db seed",
     "prisma:migrate": "npx prisma migrate dev",
     "start:migrate:prod": "npx prisma migrate deploy && pnpm start:prod",
-    "start:prd": "node dist/src/main.js"
+    "start:prod": "node dist/src/main.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.229.0",
