--- a/packages/server/copilot/api/manifest.yml
+++ b/packages/server/copilot/api/manifest.yml
@@ -47,6 +47,8 @@ network:
 environments:
  test:
   env_file: .test.env
+prod:
+  env_file: .production.env
   #  count: 2               # Number of tasks to run for the "test" environment.
   #  deployment:            # The deployment strategy for the "test" environment.
       # rolling: 'recreate' # Stops existing tasks before new ones are started for faster deployments.
