--- a/packages/server/copilot/postgres/manifest.yml
+++ b/packages/server/copilot/postgres/manifest.yml
@@ -12,6 +12,7 @@ type: Backend Service
 image:
   # Docker build arguments. For additional overrides: https://aws.github.io/copilot-cli/docs/manifest/backend-service/#image-build
   build: postgres.Dockerfile
+  port: 5432
 
 cpu: 256       # Number of CPU units for the task.
 memory: 512    # Amount of memory in MiB used by the task.
