--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -53,7 +53,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "siwe": "^1.1.6"
+    "siwe": "^1.1.6",
+    "twitter-api-sdk": "^1.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
