--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.229.0",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -39,6 +40,7 @@
     "@sentry/node": "^7.29.0",
     "@travelerdev/nestjs-sentry": "^4.1.0",
     "alchemy-sdk": "^2.2.5",
+    "axios": "^1.3.4",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
@@ -54,7 +56,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "siwe": "^1.1.6",
-    "twitter-api-sdk": "^1.2.1"
+    "twitter-api-v2": "^1.14.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
