active pill + posting to account twitter

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -51,6 +51,7 @@
     "image-size": "^1.0.2",
     "joi": "^17.7.0",
     "lodash.merge": "^4.6.2",
+    "mime-types": "^2.1.35",
     "redis": "^4.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
