--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "ethers": "5.5.1",
-    "siwe": "^1.1.6"
+    "siwe": "^1.1.6",
+    "twitter-api-v2": "^1.14.2"
   }
 }
