--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,14 @@
     "@radix-ui/react-select": "^1.1.2",
     "@rainbow-me/rainbowkit": "^0.11.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.8",
+    "@tiptap/extension-document": "^2.0.1",
+    "@tiptap/extension-dropcursor": "^2.0.1",
+    "@tiptap/extension-image": "^2.0.1",
+    "@tiptap/extension-paragraph": "^2.0.1",
+    "@tiptap/extension-text": "^2.0.1",
+    "@tiptap/pm": "^2.0.1",
+    "@tiptap/react": "^2.0.1",
+    "@tiptap/starter-kit": "^2.0.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
