--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,9 +15,11 @@
     "@radix-ui/react-select": "^1.1.2",
     "@rainbow-me/rainbowkit": "^0.11.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.8",
+    "@tiptap/extension-bold": "^2.0.1",
     "@tiptap/extension-document": "^2.0.1",
     "@tiptap/extension-dropcursor": "^2.0.1",
     "@tiptap/extension-image": "^2.0.1",
+    "@tiptap/extension-italic": "^2.0.1",
     "@tiptap/extension-paragraph": "^2.0.1",
     "@tiptap/extension-text": "^2.0.1",
     "@tiptap/pm": "^2.0.1",
