--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,6 +21,7 @@
     "@tiptap/extension-image": "^2.0.1",
     "@tiptap/extension-italic": "^2.0.1",
     "@tiptap/extension-paragraph": "^2.0.1",
+    "@tiptap/extension-placeholder": "^2.0.1",
     "@tiptap/extension-text": "^2.0.1",
     "@tiptap/pm": "^2.0.1",
     "@tiptap/react": "^2.0.1",
