--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,6 +20,7 @@
     "@tiptap/extension-dropcursor": "^2.0.1",
     "@tiptap/extension-image": "^2.0.1",
     "@tiptap/extension-italic": "^2.0.1",
+    "@tiptap/extension-link": "^2.0.2",
     "@tiptap/extension-paragraph": "^2.0.1",
     "@tiptap/extension-placeholder": "^2.0.1",
     "@tiptap/extension-text": "^2.0.1",
