--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-prebuild": "cd packages/server && yarn start:migrate:prod"
+    "heroku-prebuild": "cd packages/server && yarn install && yarn build && yarn start:migrate:prod"
   },
   "keywords": [],
   "author": "",
