--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,8 +1,8 @@
 {
   "name": "server",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "wanwan server",
+  "author": "@gainormather",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -22,15 +22,16 @@
     "prisma:generate": "npx prisma generate",
     "prisma:push": "npx prisma db push",
     "prisma:seed": "npx prisma db seed",
-    "prisma:migrate": "npx prisma migrate dev",
-    "start:migrate:prod": "npx prisma migrate deploy && pnpm start:prod",
-    "start:prod": "node dist/src/main.js"
+    "prisma:migrate:dev": "npx prisma migrate dev",
+    "start:migrate:prod": "npx prisma migrate deploy && npm run start:prod",
+    "start:prod": "node /app/dist/src/main.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.229.0",
     "@nestjs/axios": "^2.0.0",
+    "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.2.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.0",
@@ -44,7 +45,7 @@
     "cache-manager": "^4.1.0",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "connect-redis": "^6.1.3",
     "ethers": "5.5.1",
     "express-session": "^1.17.3",
