--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -42,8 +42,8 @@
     "@travelerdev/nestjs-sentry": "^4.1.0",
     "alchemy-sdk": "^2.2.5",
     "axios": "^1.3.4",
-    "cache-manager": "^4.1.0",
-    "cache-manager-redis-store": "^2.0.0",
+    "cache-manager": "^5.1.5",
+    "cache-manager-redis-yet": "^4.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "connect-redis": "^6.1.3",
