--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,23 +15,22 @@
     "@radix-ui/react-select": "^1.1.2",
     "@rainbow-me/rainbowkit": "^0.12.0",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.9",
-    "@tiptap/extension-document": "^2.0.1",
-    "@tiptap/extension-dropcursor": "^2.0.1",
-    "@tiptap/extension-image": "^2.0.1",
-    "@tiptap/extension-paragraph": "^2.0.1",
-    "@tiptap/extension-text": "^2.0.1",
-    "@tiptap/pm": "^2.0.1",
-    "@tiptap/react": "^2.0.1",
-    "@tiptap/starter-kit": "^2.0.1",
     "@tiptap/extension-bold": "^2.0.1",
+    "@tiptap/extension-bullet-list": "^2.0.3",
+    "@tiptap/extension-color": "^2.0.3",
     "@tiptap/extension-document": "^2.0.1",
     "@tiptap/extension-dropcursor": "^2.0.1",
+    "@tiptap/extension-heading": "^2.0.3",
+    "@tiptap/extension-history": "^2.0.3",
     "@tiptap/extension-image": "^2.0.1",
     "@tiptap/extension-italic": "^2.0.1",
     "@tiptap/extension-link": "^2.0.2",
+    "@tiptap/extension-list-item": "^2.0.3",
     "@tiptap/extension-paragraph": "^2.0.1",
     "@tiptap/extension-placeholder": "^2.0.1",
     "@tiptap/extension-text": "^2.0.1",
+    "@tiptap/extension-text-align": "^2.0.3",
+    "@tiptap/extension-text-style": "^2.0.3",
     "@tiptap/pm": "^2.0.1",
     "@tiptap/react": "^2.0.1",
     "@tiptap/starter-kit": "^2.0.1",
