--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,6 +28,7 @@
     "@tiptap/extension-list-item": "^2.0.3",
     "@tiptap/extension-paragraph": "^2.0.1",
     "@tiptap/extension-placeholder": "^2.0.1",
+    "@tiptap/extension-underline": "^2.0.3",
     "@tiptap/extension-text": "^2.0.1",
     "@tiptap/extension-text-align": "^2.0.3",
     "@tiptap/extension-text-style": "^2.0.3",
