--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,8 +13,9 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.1",
     "@radix-ui/react-select": "^1.1.2",
-    "@rainbow-me/rainbowkit": "^0.12.0",
-    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.9",
+    "@rainbow-me/rainbowkit": "^1.0.4",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.2.0",
+    "@spruceid/siwe-parser": "^2.0.2",
     "@tiptap/extension-bold": "^2.0.1",
     "@tiptap/extension-bullet-list": "^2.0.3",
     "@tiptap/extension-color": "^2.0.3",
@@ -28,10 +29,10 @@
     "@tiptap/extension-list-item": "^2.0.3",
     "@tiptap/extension-paragraph": "^2.0.1",
     "@tiptap/extension-placeholder": "^2.0.1",
-    "@tiptap/extension-underline": "^2.0.3",
     "@tiptap/extension-text": "^2.0.1",
     "@tiptap/extension-text-align": "^2.0.3",
     "@tiptap/extension-text-style": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.3",
     "@tiptap/pm": "^2.0.1",
     "@tiptap/react": "^2.0.1",
     "@tiptap/starter-kit": "^2.0.1",
@@ -45,7 +46,7 @@
     "date-fns-tz": "^2.0.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
-    "ethers": "^5.5.1",
+    "ethers": "^5.7.2",
     "final-form": "^4.20.7",
     "lodash": "^4.17.21",
     "mobx": "^6.7.0",
@@ -63,9 +64,10 @@
     "react-share": "^4.4.1",
     "react-spring-bottom-sheet": "^3.5.0-alpha.0",
     "react-toastify": "^9.1.1",
-    "siwe": "^1.1.6",
-    "typescript": "4.9.4",
-    "wagmi": "^0.12.12"
+    "siwe": "^2.1.4",
+    "typescript": "^5.1.6",
+    "viem": "^1.2.7",
+    "wagmi": "^1.3.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
